# presentation-writeups

./: .gitignore  AGENTS.md  README.md  agent_skills.py  azure.yaml  azure_openai_client.py  generate_writeup.py  pyproject.toml  writeup_prompt.jinja2  writing_utils.py
.github/agents/: describe-frame.md
.github/prompts/: generate-writeup.prompt.md
examples/: presentation.yaml
infra/: main.bicep  write_dot_env.ps1  write_dot_env.sh
office-hours/2026_01_06/: questions_answers.md  raw.md  youtube_description.md
office-hours/2026_01_13/: questions_answers.md  raw.md  youtube_description.md
presentations/ai-tour-rag/: presentation.md
presentations/foundry-agents-agentframework/: presentation.md
presentations/foundry-agents-evals/: presentation.md
presentations/foundry-agents-langchain/: presentation.md
presentations/foundry-iq-knowledge-bases/: presentation.yaml
presentations/ignite-agentic-kb/: presentation.yaml
presentations/motherduck-mcp/: presentation.md
presentations/podcast/: interview.MD  interview.html  presentation.md
presentations/pybay-ai-tests/: presentation.yaml
presentations/python-agents-session1/: presentation.yaml
presentations/python-agents-session2/: presentation.yaml
presentations/python-agents-session3/: presentation.md  presentation.yaml
presentations/python-agents-session4/: presentation.md
presentations/python-agents-session5/: presentation.md
presentations/python-agents-session6/: presentation.md
presentations/python-ai-rag/: presentation.md
presentations/rag-javascript/: presentation.md
(+108 files in other folders)
